beets-465 Fixed overlapping list elements
just hide the weather widget when the screen height is not enough for the entire nav bar list.

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -53,3 +53,10 @@ li img {
     position: absolute;
     bottom: 10px;
 }
+
+/* Hide the weather widget on small screens */
+@media (max-height: 575px) {
+    .weather-widget-container {
+        display: none;
+    }
+}
